--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="../JS/vue.js" defer></script>
+    <script src="../JS/script.js" defer></script>
 </head>
 <body>
     <div id="app">
@@ -55,7 +56,7 @@
                 </div>
                 <div class="btn">
                     <button><i class="bi bi-heart-pulse-fill"></i> Sinais Vitais</button>
-                    <button><i class="bi bi-file-earmark-medical"></i> Medicação do Dia</button>
+                    <button @click="medicacaoDia"><i class="bi bi-file-earmark-medical"></i> Medicação do Dia</button>
                 </div>
             </div>
         </main>
