--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="btn">
                     <button><i class="bi bi-heart-pulse-fill"></i> Sinais Vitais</button>
-                    <button @click="medicacaoDia"><i class="bi bi-file-earmark-medical"></i> Medicação do Dia</button>
+                    <button @click="trocaPagina('medicacaoDia.html')"><i class="bi bi-file-earmark-medical"></i> Medicação do Dia</button>
                 </div>
             </div>
         </main>
