--- a/html/addMedicamento.html
+++ b/html/addMedicamento.html
@@ -32,7 +32,7 @@
       </div>
       <div class="nav-card">
 
-        <div class="card">
+        <div class="card" @click="trocaPagina('addDetalhesMedicamento.html')">
           <div class="card-header">
             <p>Losartana Potássio 100mg 30 Comprimidos</p>
             <i class="bi bi-chevron-right"></i>
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card" @click="trocaPagina('addDetalhesMedicamento.html')">
           <div class="card-header">
             <p>Losartana Potássio 100mg 60 comprimidos</p>
             <i class="bi bi-chevron-right"></i>
@@ -52,7 +52,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card" @click="trocaPagina('addDetalhesMedicamento.html')">
           <div class="card-header">
             <p>Losartana Potássio 50mg 30 comprimidos</p>
             <i class="bi bi-chevron-right"></i>
