--- a/html/index.html
+++ b/html/index.html
@@ -1,70 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viva+</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="../JS/vue.js" defer></script>
-    <script src="../JS/script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Viva+</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <script src="../JS/vue.js" defer></script>
+  <script src="../JS/script.js" defer></script>
+
 </head>
 <body>
-    <div id="app">
-        <header>
-            <div class="header-top">
-                <i class="bi bi-heart-fill"></i>
-                <h2>Viva+</h2>
-            </div>
-            <div class="header-content">
-                <div class="profileSection">
-                    <img src="../img/familia.jpg" alt="foto perfil">
-                    <div class="descriptionProfile">
-                        <p>Bem-Vindo(a),</p>
-                        <p><strong>Gustavo Trindade</strong></p>
-                    </div>
-                </div>
-                <div class="localizationSection">
-                    <i class="bi bi-house-door"></i>
-                    <p>Aracaju, Sergipe</p>
-                </div>
-            </div>
-        </header>
-        <main>
-            <div class="container">
-                <div class="timer">
-                    <div class="timePicker">
-                        <i class="bi bi-clock"></i>
-                        <p>09:00</p>
-                    </div>
-                    <div class="timerDescription">
-                        <p>Tome o seu <strong>Paracetamol 500mg</strong></p>
-                    </div>
-                </div>
-                <div class="section-btn">
-                    <button class="green-btn"><i class="bi bi-check-circle"></i>Tomado</button>
-                    <button class="red-btn"><i class="bi bi-bell-fill"></i>Adiar</button>
-                </div>
-            </div>
-            <div class="action-btn">
-                <div class="btn">
-                    <div class="progress">
-                        <div class="porcentagem">100%</div>
-                        <p id="myProgress">Meu progresso</p>
-                    </div>
-                    <button><i class="bi bi-telephone"></i> SOS</button>
-                </div>
-                <div class="btn">
-                    <button><i class="bi bi-heart-pulse-fill"></i> Sinais Vitais</button>
-                    <button @click="trocaPagina('medicacaoDia.html')"><i class="bi bi-file-earmark-medical"></i> Medicação do Dia</button>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <button><i class="bi bi-calendar3"></i> Consultas</button>
-            <button><i class="bi bi-heart-pulse"></i> Saúde</button>
-            <button><i class="bi bi-person"></i> Perfil</button>
-        </footer>
+  <div id="app">
+    <div class="form-control">
+      <div class="form-content">
+        <div class="logo-content">
+          <i class="bi bi-heart-fill"></i>
+          <h1>Viva+</h1>
+        </div>
+        <form>
+          <div class="form-labels">
+            <label for="usuario">Usuário</label>
+            <input type="text" placeholder="Digite o nome do usuário" required>
+          </div>
+          <div class="form-labels">
+            <label for="senha">Senha</label>
+            <input type="password" placeholder="Digite a sua senha">
+          </div>
+          <button @click="trocaPagina('mainPage.html')">Login</button>
+        </form>
+      </div>
     </div>
+  </div>
 </body>
 </html>
