--- a/html/medicacaoDia.html
+++ b/html/medicacaoDia.html
@@ -15,7 +15,7 @@
 <body>
   <div id="app">
     <header>
-      <a href="index.html">
+      <a href="mainPage.html">
         <i class="bi bi-chevron-left"></i>
       </a>
       <h2>Medicação do Dia</h2>
